# template_library_cpp

./: .markdownlint.yaml  CMakeLists.txt  CMakePresets.json  README.md  pixi.toml
benches/: CMakeLists.txt  bench_template_library_cpp.cpp
cmake/: coverage.cmake  dependencies-lib.cmake  local-or-fetch.cmake  quality-setup.cmake
docs/: build-system.md
examples/: CMakeLists.txt  calculator_demo.cpp
include/template_library_cpp/: template_library_cpp.hpp
src/: CMakeLists.txt  template_library_cpp.cpp
tests/: CMakeLists.txt  test_template_library_cpp.cpp
